--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,67 @@
-*.class
-*.log
-/.bsp
-/.idea
-/target
-/project
+.*
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+!.gitignore
+!.scalafmt.conf
+bin
+.bloop/
+.cache
+/.classpath
+db
+dist
+.DS_Store
+**/*.DS_Store
+eclipse
+*.eml
+.history
+.idea
+.idea_modules
+/.idea_modules
+*.iml
+lib
+lib_managed
+log
+logs
+.metals/
+modules
+/out
+precompiled
+/.project
+project/metals.sbt
+project/project
+project/target
+/RUNNING_PID
+server.pid
+/.settings
+target
+.target
+test-result
+tmp
+.vscode/
 
-/target
-/project
-/.idea
-/.bsp
- 
+# scala-cli, bloop, metals
+.bsp/
+.scala-build/
+
+# scala 3
+.tasty
+
+# sbt
+project/project/
+project/target/
+target/
+
+# eclipse
+build/
+.classpath
+.project
+.settings
+.worksheet
+bin/
+
+# intellij idea
+*.ipr
+*.iws
+
+# other?
+.scala_dependencies
+.cache-main
